@@ -6,33 +6,36 @@ import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.sql.Timestamp;
 import java.time.Instant;
+import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
-import java.util.Objects;
+import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
 import javax.ws.rs.NotFoundException;
 import lombok.Data;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.io.IOUtils;
 import org.apache.http.HttpEntity;
-import org.apache.http.HttpResponse;
-import org.apache.http.client.methods.HttpGet;
-import org.apache.http.client.methods.HttpPut;
 import org.apache.http.entity.ContentType;
-import org.apache.http.impl.client.CloseableHttpClient;
-import org.apache.http.impl.client.HttpClients;
+import org.apache.http.util.EntityUtils;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.servlet.mvc.method.annotation.StreamingResponseBody;
+import software.amazon.awssdk.core.ResponseInputStream;
+import software.amazon.awssdk.services.s3.model.GetObjectResponse;
+import software.amazon.awssdk.services.s3.model.NoSuchKeyException;
+import software.amazon.awssdk.services.s3.model.PutObjectResponse;
 import software.uncharted.terarium.hmiserver.configuration.Config;
 import software.uncharted.terarium.hmiserver.models.TerariumAsset;
+import software.uncharted.terarium.hmiserver.models.dataservice.FileExport;
 import software.uncharted.terarium.hmiserver.models.dataservice.PresignedURL;
 import software.uncharted.terarium.hmiserver.repository.PSCrudSoftDeleteRepository;
 import software.uncharted.terarium.hmiserver.service.s3.S3ClientService;
+import software.uncharted.terarium.hmiserver.utils.rebac.Schema;
 
 /**
  * Base class for services that manage TerariumAssets without syncing to Elasticsearch.
@@ -75,7 +78,7 @@ public abstract class TerariumAssetServiceWithoutSearch<
 	 */
 	@Override
 	@Observed(name = "function_profile")
-	public Optional<T> getAsset(final UUID id) {
+	public Optional<T> getAsset(final UUID id, final Schema.Permission hasReadPermission) {
 		return repository.getByIdAndDeletedOnIsNull(id);
 	}
 
@@ -99,9 +102,11 @@ public abstract class TerariumAssetServiceWithoutSearch<
 	 */
 	@Override
 	@Observed(name = "function_profile")
-	public List<T> getAssets(final Integer page, final Integer pageSize) {
+	public List<T> getPublicNotTemporaryAssets(final Integer page, final Integer pageSize) {
 		final Pageable pageable = PageRequest.of(page, pageSize);
-		return repository.findAllByDeletedOnIsNull(pageable).getContent();
+		return repository
+				.findAllByPublicAssetIsTrueAndTemporaryIsFalseAndDeletedOnIsNull(pageable)
+				.getContent();
 	}
 
 	/**
@@ -112,8 +117,8 @@ public abstract class TerariumAssetServiceWithoutSearch<
 	 */
 	@Override
 	@Observed(name = "function_profile")
-	public Optional<T> deleteAsset(final UUID id) throws IOException {
-		final Optional<T> asset = getAsset(id);
+	public Optional<T> deleteAsset(final UUID id, final Schema.Permission hasWritePermission) throws IOException {
+		final Optional<T> asset = getAsset(id, hasWritePermission);
 		if (asset.isEmpty()) {
 			return Optional.empty();
 		}
@@ -131,7 +136,7 @@ public abstract class TerariumAssetServiceWithoutSearch<
 	 */
 	@Override
 	@Observed(name = "function_profile")
-	public T createAsset(final T asset) throws IOException {
+	public T createAsset(final T asset, final Schema.Permission hasWritePermission) throws IOException {
 		if (assetExists(asset.getId())) {
 			throw new IllegalArgumentException("Asset already exists for id:" + asset.getId());
 		}
@@ -147,7 +152,7 @@ public abstract class TerariumAssetServiceWithoutSearch<
 	 */
 	@Override
 	@Observed(name = "function_profile")
-	public List<T> createAssets(final List<T> assets) throws IOException {
+	public List<T> createAssets(final List<T> assets, final Schema.Permission hasWritePermission) throws IOException {
 		final List<UUID> ids = assets.stream().map(TerariumAsset::getId).toList();
 		final List<T> existing = repository.findAllByIdInAndDeletedOnIsNull(ids);
 		if (existing.size() > 0) {
@@ -168,9 +173,10 @@ public abstract class TerariumAssetServiceWithoutSearch<
 	 */
 	@Override
 	@Observed(name = "function_profile")
-	public Optional<T> updateAsset(final T asset) throws NotFoundException, IllegalArgumentException, IOException {
+	public Optional<T> updateAsset(final T asset, final Schema.Permission hasWritePermission)
+			throws IOException, IllegalArgumentException {
 
-		final Optional<T> oldAsset = getAsset(asset.getId());
+		final Optional<T> oldAsset = getAsset(asset.getId(), hasWritePermission);
 
 		if (oldAsset.isEmpty()) {
 			throw new NotFoundException(
@@ -184,51 +190,9 @@ public abstract class TerariumAssetServiceWithoutSearch<
 		final T updated = repository.save(asset);
 
 		// Update the related ProjectAsset
-		projectAssetService.updateByAsset(updated);
+		projectAssetService.updateByAsset(updated, hasWritePermission);
 
 		return Optional.of(updated);
-	}
-
-	/** Clone asset and return it, does not persist it. */
-	@Override
-	@Observed(name = "function_profile")
-	@SuppressWarnings("unchecked")
-	public T cloneAsset(final UUID id) throws IOException, IllegalArgumentException {
-		final Optional<T> targetAsset = getAsset(id);
-		if (targetAsset.isEmpty()) {
-			throw new IllegalArgumentException("Cannot clone non-existent asset: " + id.toString());
-		}
-		return (T) targetAsset.get().clone();
-	}
-
-	/** Clone asset, write it to the db under a new id, and return it. */
-	@Observed(name = "function_profile")
-	public T cloneAndPersistAsset(final UUID id) throws IOException, IllegalArgumentException {
-		return createAsset(cloneAsset(id));
-	}
-
-	/** Returns the asset as a byte payload. */
-	@Observed(name = "function_profile")
-	public byte[] exportAsset(final UUID id) {
-		try {
-			return objectMapper.writeValueAsBytes(cloneAsset(id));
-		} catch (final Exception e) {
-			throw new RuntimeException("Failed to export asset", e);
-		}
-	}
-
-	/** Imports the asset from a byte payload. */
-	@Observed(name = "function_profile")
-	public T importAsset(final byte[] bytes) {
-		try {
-			final T asset = objectMapper.readValue(bytes, assetClass);
-			if (assetExists(asset.getId())) {
-				throw new RuntimeException("Asset already exists for id:" + asset.getId());
-			}
-			return createAsset(asset);
-		} catch (final Exception e) {
-			throw new RuntimeException("Failed to export asset", e);
-		}
 	}
 
 	/**
@@ -299,53 +263,99 @@ public abstract class TerariumAssetServiceWithoutSearch<
 
 	@Observed(name = "function_profile")
 	public Optional<String> fetchFileAsString(final UUID uuid, final String filename) throws IOException {
-		try (final CloseableHttpClient httpclient =
-				HttpClients.custom().disableRedirectHandling().build()) {
 
-			final Optional<PresignedURL> url = getDownloadUrl(uuid, filename);
-			if (url.isEmpty()) {
-				return Optional.empty();
-			}
-			final PresignedURL presignedURL = url.get();
-			final HttpGet get = new HttpGet(Objects.requireNonNull(presignedURL).getUrl());
-			final HttpResponse response = httpclient.execute(get);
-			return Optional.of(IOUtils.toString(response.getEntity().getContent(), StandardCharsets.UTF_8));
+		final String bucket = config.getFileStorageS3BucketName();
+		final String key = getPath(uuid, filename);
+
+		try {
+			final ResponseInputStream<GetObjectResponse> stream =
+					s3ClientService.getS3Service().getObject(bucket, key);
+			return Optional.of(new String(stream.readAllBytes(), StandardCharsets.UTF_8));
+		} catch (final NoSuchKeyException e) {
+			return Optional.empty();
 		}
 	}
 
 	@Observed(name = "function_profile")
 	public Optional<byte[]> fetchFileAsBytes(final UUID uuid, final String filename) throws IOException {
-		try (final CloseableHttpClient httpclient =
-				HttpClients.custom().disableRedirectHandling().build()) {
+		final String bucket = config.getFileStorageS3BucketName();
+		final String key = getPath(uuid, filename);
 
-			final Optional<PresignedURL> url = getDownloadUrl(uuid, filename);
-			if (url.isEmpty()) {
-				return Optional.empty();
-			}
-			final PresignedURL presignedURL = url.get();
-			final HttpGet get = new HttpGet(Objects.requireNonNull(presignedURL).getUrl());
-			final HttpResponse response = httpclient.execute(get);
-			return Optional.of(IOUtils.toByteArray(response.getEntity().getContent()));
+		try {
+			final ResponseInputStream<GetObjectResponse> stream =
+					s3ClientService.getS3Service().getObject(bucket, key);
+			return Optional.of(stream.readAllBytes());
+		} catch (final NoSuchKeyException e) {
+			return Optional.empty();
 		}
 	}
 
 	@Observed(name = "function_profile")
-	public void uploadFile(
-			final UUID uuid, final String filename, final HttpEntity fileEntity, final ContentType contentType)
+	public Integer uploadFile(final UUID uuid, final String filename, final ContentType contentType, final byte[] data)
 			throws IOException {
-		try (final CloseableHttpClient httpclient =
-				HttpClients.custom().disableRedirectHandling().build()) {
+		final String bucket = config.getFileStorageS3BucketName();
+		final String key = getPath(uuid, filename);
+		final PutObjectResponse res = s3ClientService.getS3Service().putObject(bucket, key, contentType, data);
+		return res.sdkHttpResponse().statusCode();
+	}
 
-			final PresignedURL presignedURL = getUploadUrl(uuid, filename);
-			final HttpPut put = new HttpPut(presignedURL.getUrl());
-			put.setEntity(fileEntity);
-			put.setHeader("Content-Type", contentType.toString());
-			final HttpResponse response = httpclient.execute(put);
-			if (response.getStatusLine().getStatusCode() >= 300) {
-				throw new IOException("Failed to upload file to S3: "
-						+ response.getStatusLine().getReasonPhrase());
+	@Observed(name = "function_profile")
+	public Integer uploadFile(final UUID uuid, final String filename, final HttpEntity fileEntity) throws IOException {
+
+		return uploadFile(
+				uuid,
+				filename,
+				ContentType.parse(fileEntity.getContentType().getValue()),
+				EntityUtils.toByteArray(fileEntity));
+	}
+
+	@Observed(name = "function_profile")
+	public void copyAssetFiles(final T newAsset, final T oldAsset, final Schema.Permission hasWritePermission)
+			throws IOException {
+		final String bucket = config.getFileStorageS3BucketName();
+		final List<String> validFileNames = new ArrayList<>();
+		for (final String fileName : oldAsset.getFileNames()) {
+			final String srcKey = getPath(oldAsset.getId(), fileName);
+			final String dstKey = getPath(newAsset.getId(), fileName);
+			try {
+				s3ClientService.getS3Service().copyObject(bucket, srcKey, bucket, dstKey);
+				validFileNames.add(fileName);
+			} catch (final NoSuchKeyException e) {
+				log.error("Failed to export fileName {}, no object found, excluding from exported asset", e);
+				continue;
 			}
 		}
+		newAsset.setFileNames(validFileNames);
+	}
+
+	@Observed(name = "function_profile")
+	public Map<String, FileExport> exportAssetFiles(final UUID assetId, final Schema.Permission hasReadPermission)
+			throws IOException {
+		final T asset = getAsset(assetId, Schema.Permission.WRITE).orElseThrow();
+		final String bucket = config.getFileStorageS3BucketName();
+
+		final Map<String, FileExport> files = new HashMap<>();
+		for (final String fileName : asset.getFileNames()) {
+			final String key = getPath(assetId, fileName);
+
+			try {
+				final ResponseInputStream<GetObjectResponse> stream =
+						s3ClientService.getS3Service().getObject(bucket, key);
+				final byte[] bytes = stream.readAllBytes();
+
+				final String contentType = stream.response().contentType();
+
+				final FileExport fileExport = new FileExport();
+				fileExport.setBytes(bytes);
+				fileExport.setContentType(ContentType.parse(contentType));
+
+				files.put(fileName, fileExport);
+			} catch (final NoSuchKeyException e) {
+				log.error("Failed to export fileName {}, no object found, excluding from exported asset", e);
+				continue;
+			}
+		}
+		return files;
 	}
 
 	private String getPath(final UUID id, final String filename) {
